--- a/app/src/main/res/layout/list_row_summary.xml
+++ b/app/src/main/res/layout/list_row_summary.xml
@@ -28,20 +28,20 @@
             >
 
             <TextView
-                android:id="@+id/textview_place"
+                android:id="@+id/textview_magnitude"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Africa Windowsor Test"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Magnitude : 1.2"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:layout_marginBottom="@dimen/activity_list_vertical_margin"
                 android:gravity="top"
                 />
             <TextView
-                android:id="@+id/textview_date"
+                android:id="@+id/textview_place"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="05/13/1957"
-                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="24w of bellvue california"
+                android:textAppearance="?android:attr/textAppearanceSmall"
                 android:gravity="bottom"
                 />
 
@@ -55,4 +55,4 @@
 
     </LinearLayout>
 
-</LinearLayout><!-- From: file:/Users/newcomputer/AndroidStudioProjects/BeAlive/app/src/main/res/layout/list_item_row.xml -->
+</LinearLayout>
