--- a/app/src/main/res/layout/fragment_detail_text.xml
+++ b/app/src/main/res/layout/fragment_detail_text.xml
@@ -11,7 +11,7 @@
 
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     card_view:cardCornerRadius="10dp"
     >
 
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:padding="10dp"
-            android:text="24W of sourther clibri california"
+            android:text="24W of sourther clibri california\n(depth 12.01 kilometer)"
             android:gravity="center"
 
             />
